k8s/dev/polybot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-dev
  labels:
    app: polybot-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot-dev
  template:
    metadata:
        labels:
          app: polybot-dev
    spec:
      containers:
      - name: server
        image: gershonmx/cicdev-polybot:0.0.17
---
apiVersion: v1
kind: Service
metadata:
  name: polybot-dev-svc
spec:
  selector:
    app: polybot-dev
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
