k8s/dev/yolo5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5-dev
  labels:
    app: yolo5-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo5-dev
  template:
    metadata:
        labels:
          app: yolo5-dev
    spec:
      containers:
      - name: yolo5-dev
        image: IMG_URL
        ports:
        - containerPort: 8080
---
# yolo-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: yolo5-dev-svc
spec:
  selector:
    app: yolo5-dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
